--- a/petaJalanAdmin.html
+++ b/petaJalanAdmin.html
@@ -1,119 +1,143 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Peta Jalan Admin - Network & Cyber Security Lab</title>
+    <title>Peta Jalan - Network & Cyber Security Lab</title>
 
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    
+    <!-- CSS Base -->
     <link rel="stylesheet" href="assets/css/base.css">
+    <!-- CSS Header -->
     <link rel="stylesheet" href="assets/css/pages/navbar.css">
+    <!-- CSS Sidebar -->
     <link rel="stylesheet" href="assets/css/pages/sidebar.css">
-    <link rel="stylesheet" href="assets/css/pages/petaJalanAdmin.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <!-- CSS Peta Jalan -->
+    <link rel="stylesheet" href="assets/css/pages/peta-jalan.css">
 </head>
 
 <body>
 
+    <!-- Header -->
     <div id="header-placeholder"></div>
+
+    <!-- Layout Sidebar + Content -->
     <div class="layout">
+        <!-- Sidebar -->
         <aside class="sidebar">
             <div id="sidebar-placeholder"></div>
         </aside>
 
+        <!-- Main Content -->
         <main class="content">
-            <section class="hero-section-admin">
+            <div class="page-title">
                 <h1>Peta Jalan</h1>
-            </section>
+            </div>
 
-            <section class="timeline-section-admin">
-                <div class="aura-right-bottom"></div>
-                <div class="timeline-container-admin">
-                    <div class="timeline-circle-top"></div>
-                    
-                    <div class="timeline-item-admin left">
-                        <div class="timeline-card-admin">
-                            <div class="timeline-icon-admin">
+            <section class="timeline-section">
+                <div class="timeline-container">
+                    <!-- Timeline Left -->
+                    <div class="timeline-column timeline-left">
+                        <!-- Item 1 -->
+                        <div class="timeline-item">
+                            <div class="timeline-icon">
                                 <i class="fa-solid fa-file-lines"></i>
                             </div>
-                            <h3>2020 – 2021</h3>
-                            <p>Lorem ipsum doo or sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna</p>
-                            <ul>
-                                <li>Ut enim ad minim veniam, quis nostrud exercitation</li>
-                                <li>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                                <li>Duis aute irure dolor in reprehenderit in voluptate velit</li>
-                            </ul>
+                            <div class="timeline-card">
+                                <h3>2020 - 2021</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna</p>
+                                <ul class="timeline-list">
+                                    <li>Ut enim ad minim veniam, quis nostrud exercitation</li>
+                                    <li>Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
+                                    <li>Duis aute irure dolor in</li>
+                                </ul>
+                                <a href="#" class="btn-lihat-file"><i class="fa-solid fa-download"></i> Lihat File</a>
+                            </div>
+                        </div>
+
+                        <!-- Item 2 -->
+                        <div class="timeline-item">
+                            <div class="timeline-icon">
+                                <i class="fa-solid fa-file-lines"></i>
+                            </div>
+                            <div class="timeline-card">
+                                <h3>2021 - 2022</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna</p>
+                                <ul class="timeline-list">
+                                    <li>Ut enim ad minim veniam, quis nostrud exercitation</li>
+                                    <li>Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
+                                    <li>Duis aute irure dolor in</li>
+                                </ul>
+                                <a href="#" class="btn-lihat-file"><i class="fa-solid fa-download"></i> Lihat File</a>
+                            </div>
+                        </div>
+
+                        <!-- Item 3 -->
+                        <div class="timeline-item">
+                            <div class="timeline-icon">
+                                <i class="fa-solid fa-file-lines"></i>
+                            </div>
+                            <div class="timeline-card">
+                                <h3>2022 - 2023</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna</p>
+                                <ul class="timeline-list">
+                                    <li>Ut enim ad minim veniam, quis nostrud exercitation</li>
+                                    <li>Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
+                                    <li>Duis aute irure dolor in</li>
+                                </ul>
+                                <a href="#" class="btn-lihat-file"><i class="fa-solid fa-download"></i> Lihat File</a>
+                            </div>
                         </div>
                     </div>
 
-                    <div class="timeline-item-admin right">
-                        <div class="timeline-card-admin">
-                            <div class="timeline-icon-admin">
+                    <!-- Timeline Center Line -->
+                    <div class="timeline-center"></div>
+
+                    <!-- Timeline Right -->
+                    <div class="timeline-column timeline-right">
+                        <!-- Item 1 -->
+                        <div class="timeline-item">
+                            <div class="timeline-card">
+                                <h3>2020 - 2021</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna</p>
+                                <ul class="timeline-list">
+                                    <li>Ut enim ad minim veniam, quis nostrud exercitation</li>
+                                    <li>Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
+                                    <li>Duis aute irure dolor in</li>
+                                </ul>
+                                <a href="#" class="btn-lihat-file"><i class="fa-solid fa-download"></i> Lihat File</a>
+                            </div>
+                            <div class="timeline-icon">
                                 <i class="fa-solid fa-file-lines"></i>
                             </div>
-                            <h3>2020 – 2021</h3>
-                            <p>Lorem ipsum doo or sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna</p>
-                            <ul>
-                                <li>Ut enim ad minim veniam, quis nostrud exercitation</li>
-                                <li>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                                <li>Duis aute irure dolor in reprehenderit in voluptate velit</li>
-                            </ul>
                         </div>
-                    </div>
 
-                    <div class="timeline-item-admin left">
-                        <div class="timeline-card-admin">
-                            <div class="timeline-icon-admin">
+                        <!-- Item 2 -->
+                        <div class="timeline-item">
+                            <div class="timeline-card">
+                                <h3>2023 - 2024</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna</p>
+                                <ul class="timeline-list">
+                                    <li>Ut enim ad minim veniam, quis nostrud exercitation</li>
+                                    <li>Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
+                                    <li>Duis aute irure dolor in</li>
+                                </ul>
+                                <a href="#" class="btn-lihat-file"><i class="fa-solid fa-download"></i> Lihat File</a>
+                            </div>
+                            <div class="timeline-icon">
                                 <i class="fa-solid fa-file-lines"></i>
                             </div>
-                            <h3>2020 – 2021</h3>
-                            <p>Lorem ipsum doo or sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna</p>
-                            <ul>
-                                <li>Ut enim ad minim veniam, quis nostrud exercitation</li>
-                                <li>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                                <li>Duis aute irure dolor in reprehenderit in voluptate velit</li>
-                            </ul>
                         </div>
                     </div>
-
-                    <div class="timeline-item-admin right">
-                        <div class="timeline-card-admin">
-                            <div class="timeline-icon-admin">
-                                <i class="fa-solid fa-file-lines"></i>
-                            </div>
-                            <h3>2020 – 2021</h3>
-                            <p>Lorem ipsum doo or sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna</p>
-                            <ul>
-                                <li>Ut enim ad minim veniam, quis nostrud exercitation</li>
-                                <li>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                                <li>Duis aute irure dolor in reprehenderit in voluptate velit</li>
-                            </ul>
-                        </div>
-                    </div>
-
-                    <div class="timeline-item-admin left">
-                        <div class="timeline-card-admin">
-                            <div class="timeline-icon-admin">
-                                <i class="fa-solid fa-file-lines"></i>
-                            </div>
-                            <h3>2020 – 2021</h3>
-                            <p>Lorem ipsum doo or sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna</p>
-                            <ul>
-                                <li>Ut enim ad minim veniam, quis nostrud exercitation</li>
-                                <li>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                                <li>Duis aute irure dolor in reprehenderit in voluptate velit</li>
-                            </ul>
-                        </div>
-                    </div>
-
                 </div>
 
-                <div class="kelola-button-wrapper">
-                    <button class="kelola-button">
-                        <span>Kelola</span>
-                    </button>
+                <div class="timeline-footer">
+                    <button class="btn-kembali">Kembali</button>
+                    <button class="btn-kelola"><i class="fa-solid fa-pen-to-square"></i> Kelola</button>
                 </div>
             </section>
-
         </main>
     </div>
 
