--- a/petaJalanTambah.html
+++ b/petaJalanTambah.html
@@ -44,7 +44,7 @@
                     <input type="hidden" name="user_id" value="1">
 
                     <button type="submit" name="submit" class="btn-submit">Simpan</button>
-                    <a href="petaJalanTabel.php" class="btn-cancel">Batal</a>
+                    <a href="petaJalanTabel.html" class="btn-cancel">Batal</a>
 
                 </form>
             </section>
