--- a/petaJalanAdmin.html
+++ b/petaJalanAdmin.html
@@ -29,6 +29,7 @@
             </section>
 
             <section class="timeline-section-admin">
+                <div class="aura-left-bottom"></div>
 
                 <div class="timeline-container-admin">
                     <div class="timeline-circle-top-admin"></div>
@@ -37,7 +38,7 @@
                     <div class="timeline-item-admin left">
                         <div class="timeline-card-admin">
                             <div class="timeline-icon-admin"><i class="fa-solid fa-file-lines"></i></div>
-                            <h3>Contoh Judul – 2023</h3>
+                            <h3>2023 – Contoh Judul</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             <a class="btn-lihat" href="#"><i class="fa-solid fa-download"></i> Lihat File</a>
                         </div>
@@ -47,7 +48,7 @@
                     <div class="timeline-item-admin right">
                         <div class="timeline-card-admin">
                             <div class="timeline-icon-admin"><i class="fa-solid fa-file-lines"></i></div>
-                            <h3>Contoh Judul – 2024</h3>
+                            <h3>2024 – Contoh Judul</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             <a class="btn-lihat" href="#"><i class="fa-solid fa-download"></i> Lihat File</a>
                         </div>
@@ -57,7 +58,7 @@
                     <div class="timeline-item-admin left">
                         <div class="timeline-card-admin">
                             <div class="timeline-icon-admin"><i class="fa-solid fa-file-lines"></i></div>
-                            <h3>Contoh Judul – 2025</h3>
+                            <h3>2025 – Contoh Judul</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, alias.</p>
                             <a class="btn-lihat" href="#"><i class="fa-solid fa-download"></i> Lihat File</a>
                         </div>
@@ -67,7 +68,7 @@
                     <div class="timeline-item-admin right">
                         <div class="timeline-card-admin">
                             <div class="timeline-icon-admin"><i class="fa-solid fa-file-lines"></i></div>
-                            <h3>Contoh Judul – 2026</h3>
+                            <h3>2026 – Contoh Judul</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, molestiae.</p>
                             <a class="btn-lihat" href="#"><i class="fa-solid fa-download"></i> Lihat File</a>
                         </div>
@@ -77,7 +78,7 @@
                     <div class="timeline-item-admin left">
                         <div class="timeline-card-admin">
                             <div class="timeline-icon-admin"><i class="fa-solid fa-file-lines"></i></div>
-                            <h3>Contoh Judul – 2027</h3>
+                            <h3>2027 – Contoh Judul</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, repellendus.</p>
                             <a class="btn-lihat" href="#"><i class="fa-solid fa-download"></i> Lihat File</a>
                         </div>
