--- a/profil-admin.html
+++ b/profil-admin.html
@@ -20,14 +20,12 @@
 <body>
     
     <!-- Header -->
-    <div id="header-placeholder"></div>
+    <div id="header"></div>
     
     <!-- Layout dengan Sidebar -->
     <div class="layout">
 
-        <aside class="sidebar">
-            <div id="sidebar-placeholder"></div>
-        </aside>
+    <div id="sidebar"></div>
 
         <main class="content">
 
