--- a/header.html
+++ b/header.html
@@ -1,6 +1,3 @@
-<head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-</head>
 <nav class="navbar">
     <div class="nav-container">
 
@@ -12,18 +9,20 @@
                 <span class="brand-sub">Laboratorium</span>
             </div>
         </div>
+
         <ul class="nav-menu">
             <li class="nav-profile">
                 <i class="fa-solid fa-user"></i>
                 <span>Fina Isma</span>
             </li>
+
             <li class="nav-logout">
                 <a href="logout.html">
                     <i class="fa-solid fa-right-from-bracket"></i> Logout
                 </a>
             </li>
         </ul>
-        </ul>
 
     </div>
 </nav>
+<div id="header-placeholder"></div>
