--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <!-- CSS Footer -->
     <link rel="stylesheet" href="assets/css/pages/footer.css">
     <link rel="stylesheet" href="assets/css/pages/landing.css">
-    </head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">  
+  </head>
 <!-- Landing Page HTML (Updated with cards & dummy images) -->
 <body>
     <!-- NAVBAR -->
@@ -50,29 +51,59 @@
   <button>Selengkapnya</button>
 </section>
 
-<!-- Peta Jalan
 <section class="peta-jalan">
-<h3>Peta Jalan</h3>
-<div class="divider"></div>
-<div class="timeline-line"></div>
-<div class="timeline">
-<div class="timeline-item">
-<div class="dot"></div>
-<h4>2020 - 2021</h4>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    <h2 class="pj-title">Peta Jalan</h2>
+
+    <div class="pj-wrapper">
+
+        <!-- Garis lurus -->
+<svg class="pj-line" viewBox="0 0 1400 50" preserveAspectRatio="none">
+    <line x1="0" y1="25" x2="1400" y2="25" stroke="#FEBE11" stroke-width="3" />
+</svg>
+
+        <!-- Titik2 -->
+        <div class="pj-dot dot1"></div>
+        <div class="pj-dot dot2"></div>
+        <div class="pj-dot dot3"></div>
+        <div class="pj-dot dot4"></div>
+        <div class="pj-dot dot5"></div>
+
+        <!-- Card Atas -->
+        <div class="pj-card card-top card-top-1">
+    <i class="fa-regular fa-file-lines pj-icon"></i>
+    <h4>2020 - 2021</h4>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 </div>
-<div class="timeline-item">
-<div class="dot"></div>
-<h4>2021 - 2022</h4>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+        <div class="pj-card card-top card-top-2">
+    <i class="fa-regular fa-file-lines pj-icon"></i>
+    <h4>2020 - 2021</h4>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 </div>
-<div class="timeline-item">
-<div class="dot"></div>
-<h4>2022 - 2023</h4>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-</div>
-</div>
-<button>Selengkapnya</button> -->
+
+
+        <!-- Card Bawah -->
+        <div class="pj-card card-bottom card-bottom-1">
+    <i class="fa-regular fa-file-lines pj-icon"></i>
+    <h4>2020 - 2021</h4>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+
+        <div class="pj-card card-bottom card-bottom-2">
+    <i class="fa-regular fa-file-lines pj-icon"></i>
+    <h4>2020 - 2021</h4>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+
+        <div class="pj-card card-bottom card-bottom-3">
+    <i class="fa-regular fa-file-lines pj-icon"></i>
+    <h4>2020 - 2021</h4>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+
+    </div>
+
+    <button class="pj-btn">Selengkapnya</button>
 </section>
 
 <section class="galeri">
@@ -129,7 +160,7 @@
     <div class="arsip-divider"></div>
 
     <div class="arsip-card">
-        <img src="assets/pdf.png" alt="PDF" />
+<i class="fa-regular fa-file-lines arsip-icon"></i>
         <div class="arsip-text">
             <h4>Evaluasi Keamanan Jaringan pada Sistem Informasi Akademik</h4>
             <p>
@@ -142,7 +173,7 @@
     </div>
 
     <div class="arsip-card">
-        <img src="assets/pdf.png" alt="PDF" />
+<i class="fa-regular fa-file-lines arsip-icon"></i>
         <div class="arsip-text">
             <h4>Evaluasi Keamanan Jaringan pada Sistem Informasi Akademik</h4>
             <p>
@@ -155,7 +186,7 @@
     </div>
 
     <div class="arsip-card">
-        <img src="assets/pdf.png" alt="PDF" />
+<i class="fa-regular fa-file-lines arsip-icon"></i>
         <div class="arsip-text">
             <h4>Evaluasi Keamanan Jaringan pada Sistem Informasi Akademik</h4>
             <p>
