--- a/footer.html
+++ b/footer.html
@@ -6,7 +6,7 @@
     <div class="footer-top">
 
         <div class="footer-image">
-            <img src="assets/img/image 5.png" alt="Laboratorium" />
+            <img src="assets/img/jti.png" alt="Laboratorium" />
         </div>
 
         <div class="footer-middle">
@@ -14,15 +14,13 @@
             <h3>Laboratorium</h3>
 
             <p class="footer-desc">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Donec at varius turpis, non faucibus diam. Proin mi urna,
-                scelerisque sed sodales elementum, gravida ac lacus,
-                amet bibendum.
+                Laboratorium ini adalah unit pendukung akademik di Jurusan Teknologi Informasi
+                yang berfokus pada pengembangan kompetensi jaringan komputer dan keamanan siber.
             </p>
 
             <!-- Bullet list with proper icons -->
             <ul class="footer-bullets">
-                <li><i class="fa-solid fa-location-dot"></i> Lokasi Laboratorium NCS</li>
+                <li><i class="fa-solid fa-location-dot"></i> Jl. Soekarno Hatta No.9, Jatimulyo, Kec. Lowokwaru, <br>Kota Malang, Jawa Timur 65141</li>
                 <li><i class="fa-solid fa-phone"></i> +62 812 3456 7890</li>
                 <li><i class="fa-solid fa-envelope"></i> ncs.lab@example.com</li>
             </ul>
@@ -32,10 +30,10 @@
             <h4>Kunjungi Juga</h4>
 
             <ul class="footer-links">
-                <li><a href="#"><i class="fa-solid fa-link"></i> Jurnal Publikasi</a></li>
-                <li><a href="#"><i class="fa-solid fa-link"></i> Repository Penelitian</a></li>
-                <li><a href="#"><i class="fa-solid fa-link"></i> Sistem Informasi</a></li>
-                <li><a href="#"><i class="fa-solid fa-link"></i> Website Fakultas</a></li>
+                <li><a href="https://sinta.kemdiktisaintek.go.id/authors/profile/5983891"><i class="fa-solid fa-link"></i> Publikasi SINTA</a></li>
+                <li><a href="https://jti.polinema.ac.id/laboratorium-jaringan-dan-keamanan-siber/"><i class="fa-solid fa-link"></i> SIMTA JTI</a></li>
+                <li><a href="https://jti.polinema.ac.id/"><i class="fa-solid fa-link"></i> Website JTI POLINEMA</a></li>
+                <li><a href="https://www.polinema.ac.id/"><i class="fa-solid fa-link"></i> Website POLINEMA</a></li>
             </ul>
         </div>
 
@@ -45,9 +43,9 @@
 
     <div class="footer-bottom">
         <div class="footer-center-icon"><i class="fa-solid fa-circle-info"></i>
-            Lorem ipsum dolor sit amet, consectetur
+            Kelompok 2 PBL SIB2C 2025/2026
         </div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+        <p>Jurusan Teknologi Informasi | Politeknik Negeri Malang</p>
     </div>
 
 </footer>
